--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,24 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title><%= title %></title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="<%=description%>">
+  <meta name="author" content="Jacob Amoah">
+  <title>
+    <%=title %>
+  </title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="styles/siteplan.css">
+  <title>
+    <%= title %>
+  </title>
 </head>
+
 <body>
 
-<header>
-  <nav>
-    <a href="/">Home</a>
-  </nav>
-</header>
+  <header class="site-header">
+    <div class="header-inner">
+      <h1>CSE MOTORS</h1>
+      <a href="#" class="account-link">My Account</a>
+    </div>
+    <nav>
+      <ul id="nav-bar" class="navigation">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Custom</a></li>
+        <li><a href="#">Sedan</a></li>
+        <li><a href="#">SUV</a></li>
+        <li><a href="#">Truck</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<main>
-  <%- body %>
-</main>
+  <main>
+    <%- body %>
+  </main>
 
-<footer>
-  <p>&copy; 2026</p>
-</footer>
+  <footer>
+    <p>&copy; 2026</p>
+  </footer>
 
 </body>
+
 </html>
