--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -15,10 +15,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="styles/siteplan.css">
-  <title>
-    <%= title %>
-  </title>
 </head>
 
 <body>
@@ -30,11 +26,11 @@
     </div>
     <nav>
       <ul id="nav-bar" class="navigation">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Custom</a></li>
-        <li><a href="#">Sedan</a></li>
-        <li><a href="#">SUV</a></li>
-        <li><a href="#">Truck</a></li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/cusstom">Custom</a></li>
+        <li><a href="/sedan">Sedan</a></li>
+        <li><a href="/suv">SUV</a></li>
+        <li><a href="/truck">Truck</a></li>
       </ul>
     </nav>
   </header>
