done with html project

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,305 @@
-/******* Change Box Model ***************/
 *,
 *:before,
 *:after {
   box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  background-color: #ffffff;
+  color: #1a1a1a;
+
+}
+
+.site-header {
+  background: #fffdfd;
+  max-width: 100%;
+  margin: 0 auto;
+  font-family: Arial, sans-serif;
+}
+
+.header-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  color: #050404;
+}
+
+.site-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.account-link {
+  text-decoration: none;
+  font-size: 0.9rem;
+  color: #0c0b0b;
+
+}
+
+#myButton {
+  font-size: 2rem;
+  background: none;
+  border: none;
+  color: #000;
+  cursor: pointer;
+}
+
+#myButton {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+#myButton::before {
+  content: "\2630";
+}
+
+#myButton.open::before {
+  content: "\0058";
+}
+
+nav {
+  width: 100%;
+  grid-template-rows: 0fr;
+  display: grid;
+  transition: grid-template-rows 0.3s ease-in-out;
+
+}
+
+nav ul {
+  overflow: visible;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li a {
+  display: block;
+  padding: 0.75rem 1rem;
+  text-decoration: none;
+
+}
+
+nav.open {
+  grid-template-rows: 1fr;
+}
+
+.navlist a {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+.navlist a:hover {
+  color: #ebf0f4;
+}
+
+
+
+h2 {
+  font-size: xx-large;
+  font-weight: bolder;
+  margin-left: 10px;
+
+}
+
+
+.hero {
+  display: flex;
+  align-items: center;
+  max-width: 1000px;
+  padding: 20px;
+  background-color: #fefefe;
+  position: relative;
+}
+
+.hero-text {
+  border: 2px solid #1a1a1a;
+  border-radius: 10px;
+  margin-right: 10px;
+  justify-content: center;
+  padding: 4rem 2rem 4rem 2rem;
+  position: absolute;
+  line-height: 1;
+
+}
+
+.hero-text h2 {
+  color: #25b6ff;
+  margin: auto;
+}
+
+.hero-text ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.hero-text li {
+  margin-bottom: 5px;
+  color: #02abff;
+}
+
+.hero-text .btn {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 10px 20px;
+  background-color: #00aaff;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+}
+
+.hero-image img {
+  max-width: 100%;
+  height: auto;
+  margin-left: 120px;
+}
+
+.upgrades-reviews {
+  display: flex;
+  max-width: 1000px;
+  margin: 0 30px 5px 30px;
+  gap: 5rem;
+}
+
+.upgrade-items {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 5rem;
+
+}
+
+.upgrade-items .item {
+  text-align: center;
+}
+
+.upgrade-items .item img {
+  border: 2px solid #1a1a1a;
+  padding: 15px 5rem;
+  background-color: #02abff;
+}
+
+
+.reviews ul {
+  list-style: disc;
+  padding-left: 20px;
+  line-height: 4.5;
+}
+
+footer {
+  text-align: center;
+  padding: 15px 0;
+  background-color: #222;
+  color: white;
+  margin-top: 40px;
+}
+
+@media (max-width: 768px) {
+  nav ul {
+    overflow: hidden;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(48, 48, 72);
+  }
+
+
+  nav ul.navlist {
+    display: grid;
+    justify-items: flex-end;
+    margin: 0;
+  }
+
+
+  #myButton {
+    color: rgb(14, 13, 13);
+  }
+
+  .account-link {
+    text-decoration: none;
+    font-size: 0.9rem;
+    color: #0c0b0b;
+    margin-left: 20px;
+
+  }
+
+
+  .hero {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 15px;
+  }
+
+  .hero-text {
+    position: absolute;
+    border: 2px solid blue;
+    padding: 1rem;
+    margin-bottom: 10px;
+    line-height: 1.2;
+    top: -10%;
+  }
+
+  .hero-text h2 {
+    font-size: 1.2rem;
+    margin: auto;
+
+  }
+
+  .hero-text ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .hero-text li {
+    margin-bottom: 3px;
+    font-size: 0.95rem;
+  }
+
+  .hero-text .btn {
+    padding: 6px 10px;
+    font-size: 0.9rem;
+  }
+
+  .hero-image img {
+    max-width: 100%;
+    height: auto;
+    margin-left: 120px;
+  }
+
+  .upgrades-reviews {
+    display: grid;
+    grid-template-columns: 1fr;
+    max-width: 1000px;
+    margin: 0 30px 5px 30px;
+    gap: 5rem;
+  }
+
+  .upgrades {
+    order: 2;
+  }
+
+
+  .upgrade-items {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+    justify-items: start;
+
+
+  }
+
+
+  .upgrade-items .item img {
+    border: 2px solid #1a1a1a;
+    padding: 15px 2rem;
+  }
+
 }
