--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -14,18 +14,20 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/large-styles.css">
 
 </head>
 
 <body>
-
   <header class="site-header">
     <div class="header-inner">
-      <h1>CSE MOTORS</h1>
-      <a href="#" class="account-link">My Account</a>
+      <h1 class="site-title">CSE MOTORS</h1>
+      <a href="/login" class="account-link">MY ACCOUNT</a>
+      <button id="myButton" aria-label="Open navigation menu"></button>
     </div>
-    <nav>
-      <ul id="nav-bar" class="navigation">
+    <nav id="animateme">
+      <ul class="navlist">
         <li><a href="/">Home</a></li>
         <li><a href="/cusstom">Custom</a></li>
         <li><a href="/sedan">Sedan</a></li>
@@ -40,8 +42,10 @@
   </main>
 
   <footer>
-    <p>&copy; 2026</p>
+    <p>&copy; 2026 @JACOB AMOAH</p>
   </footer>
+
+  <script src="/js/nav.js"></script>
 
 </body>
 
