--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,56 @@
-<h1>Jacob amoah</h1>
-<p>Welcome to my CSE 340 project.</p>
+<h2>Welcome to CSE Motors</h2>
+
+<section class="hero">
+    <div class="hero-text">
+        <h2>DMC Delorean</h2>
+        <ul>
+            <li>3 Cup holders</li>
+            <li>Superman doors</li>
+            <li>Fuzzy dice!</li>
+        </ul>
+        <a href="#" class="btn">Own Today</a>
+    </div>
+    <div class="hero-image">
+        <picture>
+            <img src="/images/vehicles/delorean.jpg" alt="DMC Delorean"
+            srcset="/images/vehicles/delorean-tn.jpg 200w, /images/vehicles/delorean.jpg 800w">
+        </picture>
+    </div>
+</section>
+
+<section class="upgrades-reviews">
+    <div class="upgrades">
+        <h3>Delorean Upgrades</h3>
+        <div class="upgrade-items">
+            <div class="item">
+                <img src="/images/upgrades/bumper_sticker.jpg" alt="Flux Capacitor">
+                <p>Flux Capacitor</p>
+            </div>
+            <div class="item">
+                <img src="/images/upgrades/flame.jpg" alt="Flame Decals">
+                <p>Flame Decals</p>
+            </div>
+            <div class="item">
+                <img src="/images/upgrades/flux-cap.png" alt="Bumper Stickers">
+                <p>Bumper Stickers</p>
+            </div>
+            <div class="item">
+                <img src="/images/upgrades/hub-cap.jpg" alt="Hub Caps">
+                <p>Hub Caps</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="reviews">
+        <h3>DMC Delorean Reviews</h3>
+        <ul>
+            <li>"So fast it's almost like traveling in time." (4/5)</li>
+            <li>"Coolest ride on the road." (4/5)</li>
+            <li>"I'm feeling McFly!" (5/5)</li>
+            <li>"The most futuristic ride of our day." (4.5/5)</li>
+            <li>"80's livin and I love it!" (5/5)</li>
+        </ul>
+    </div>
+</section>
+
+<script src="/js/script.js"></script>
