--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -131,7 +131,7 @@ h2 {
 }
 
 .hero-text h2 {
-  color: #25b6ff;
+  color: #000000;
   margin: auto;
 }
 
@@ -143,14 +143,14 @@ h2 {
 
 .hero-text li {
   margin-bottom: 5px;
-  color: #02abff;
+  color: #000000;
 }
 
 .hero-text .btn {
   display: inline-block;
   margin-top: 10px;
   padding: 10px 20px;
-  background-color: #00aaff;
+  background-color: #000000;
   color: white;
   text-decoration: none;
   border-radius: 5px;
