--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,7 +7,7 @@
 body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
-  background-color: #ffffff;
+  background-color: none;
   color: #1a1a1a;
 
 }
