--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,3 @@
 <nav id="animateme">
-    <ul class="navlist">
-        <li><a href="/">Home</a></li>
-        <li><a href="/cusstom">Custom</a></li>
-        <li><a href="/sedan">Sedan</a></li>
-        <li><a href="/suv">SUV</a></li>
-        <li><a href="/truck">Truck</a></li>
-    </ul>
+   <%- nav %>
 </nav>
