--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,10 @@
 <h2>Welcome to CSE Motors</h2>
 
+<div class="flash-home">
+  <%- messages() %>
+</div>
+
+
 <section class="hero">
     <div class="hero-text">
         <h2>DMC Delorean</h2>
