--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <header class="site-header">
     <div class="header-inner">
         <h1 class="site-title">CSE MOTORS</h1>
-        <a href="account/login" class="account-link">MY ACCOUNT</a>
+        <a href="/account/login" class="account-link">MY ACCOUNT</a>
         <button id="myButton" aria-label="Open navigation menu"></button>
     </div>
 </header>
