--- a/views/account/signup.ejs
+++ b/views/account/signup.ejs
@@ -26,11 +26,11 @@
             <label for="email">Email:</label>
             <input type="email" id="email" name="account_email">
 
-            <label for="password">Password:</label>
+            <label for="account_password">Password:</label>
             <div class="password-container">
                 <input type="password" id="account_password" name="account_password" />
 
-                <i class="fa fa-eye" id="togglePassword" aria-label="Toggle password visibility"
+                <i class="fa fa-eye" id="togglePassword" 
                     onclick="togglePasswordVisibility()"></i>
             </div>
             <input type="submit" value="signup">
