--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -22,7 +22,7 @@
 
             <p class="signup-link">
                 Don't have an account?
-                <a href="/account/signup">Sign up</a>
+                <a href="/account/register">Sign up</a>
             </p>
         </fieldset>
     </form>
