--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -3,42 +3,38 @@
 </h1>
 
 <div class="flash-home">
-  <ul class="messages">
-    <% if (messages && messages().notice) { %>
-      <% messages().notice.forEach(msg=> { %>
-        <li class="notice">
-          <%= msg %>
-        </li>
-        <% }) %>
-          <% } %>
-
-            <% if (typeof error !=="undefined" && error.msg) { %>
-              <li class="error">
-                <%= error.msg %>
-              </li>
-              <% } %>
-  </ul>
+  <%- messages() %>
 </div>
+
+<% if (errors) { %>
+  <ul class="notice">
+ <% errors.array().forEach(error => { %>
+    <li><%= error.msg %></li>
+<%  }) %>
+  </ul>
+<% } %>
+
 
 
 
 <div class="login-container">
-  <form action="/account/register" method="post" class="cf1">
+  <form  action="/account/register" method="post" class="cf1" >
     <fieldset class="login-fieldset">
 
       <legend>Contact Information</legend>
 
       <label>First Name</label>
-      <input type="text" name="account_firstname">
+      <input type="text" name="account_firstname" placeholder="Enter you lastname" required>
 
       <label>Last Name</label>
-      <input type="text" name="account_lastname">
+      <input type="text" name="account_lastname" placeholder=" Enter your lastname" required >
 
       <label for="email">Email:</label>
-      <input type="email" id="email" name="account_email">
+      <input type="email" id="email" name="account_email" placeholder="Enter a valid email address" required>
 
       <label for="password">Password:</label>
-      <input type="password" id="password" name="account_password" />
+      <input type="password" id="password" name="account_password" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
+      <span>Passwords must be at least 12 characters and contain at least 1 number, 1 capital letter and 1 special character</span> 
       <span id="pswdBtn" style="cursor:pointer;">Show Password</span>
 
       <input type="submit" value="register">
