--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -7,16 +7,30 @@
     <%- messages() %>
 </div>
 
+
+<% if (errors) { %>
+  <ul class="notice">
+ <% errors.array().forEach(error => { %>
+    <li><%= error.msg %></li>
+<%  }) %>
+  </ul>
+<% } %>
+
+
+
 <div class="login-container">
-    <form action="/account/login" method="post" class="cf1">
+    <form id="loginForm" action="/account/login" method="post" class="cf1">
         <fieldset class="login-fieldset">
             <legend>Login to your account</legend>
 
             <label for="email">Email:</label>
-            <input type="email" id="email" name="account_email" required>
+            <input type="email" id="email" name="account_email" required value="<%= locals.account_email%>">
 
             <label for="password">Password:</label>
-            <input type="password" id="password" name="account_password" required>
+            <input type="password" id="password" name="account_password" required
+                pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
+            <span>Passwords must be at least 12 characters and contain at least 1 number, 1 capital letter and 1 special
+                character</span>
             <span id="pswdBtn" style="cursor:pointer;">Show Password</span>
 
 
