--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -24,13 +24,13 @@
       <legend>Contact Information</legend>
 
       <label>First Name</label>
-      <input type="text" name="account_firstname" placeholder="Enter you lastname" required>
+      <input type="text" name="account_firstname" placeholder="Enter you lastname" required value="<%= locals.account_firstname%>">
 
       <label>Last Name</label>
-      <input type="text" name="account_lastname" placeholder=" Enter your lastname" required >
+      <input type="text" name="account_lastname" placeholder=" Enter your lastname" required value="<%= locals.account_lastname%>">
 
       <label for="email">Email:</label>
-      <input type="email" id="email" name="account_email" placeholder="Enter a valid email address" required>
+      <input type="email" id="email" name="account_email" placeholder="Enter a valid email address" required value="<%= locals.account_email%>">
 
       <label for="password">Password:</label>
       <input type="password" id="password" name="account_password" required pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$">
