Done with jwt authorization

--- a/views/account/accountManagement.ejs
+++ b/views/account/accountManagement.ejs
@@ -18,4 +18,4 @@
 
 <p>You're logged in</p>
 
-<a href="/account/accountInfo">Edit youtr account info</a>
+<a href="/account/accountInfo">Edit your account info</a>
