--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -27,3 +27,11 @@
     </li>
   </ul>
 </section>
+
+<h2>Manage Inventory</h2>
+<p>Choose a classification to see those inventory items.</p>
+<%- classificationSelect %>
+
+<table id="inventoryDisplay"></table>
+
+<noscript>Javascript must be enable to use this page</noscript>
