--- a/views/inventory/edit-inventory.ejs
+++ b/views/inventory/edit-inventory.ejs
@@ -52,7 +52,7 @@
     <label for="inv_color">Color</label>
     <input type="text" id="inv_color" name="inv_color" required value="<%= locals.inv_color %>">
 
-    <button type="submit">Add Vehicle</button>
+    <button type="submit">Update Vehicle</button>
 
     <input type="hidden" name="inv_id"<% if(locals.inv_id) { %> value="<%= locals.inv_id %>"<% } %>>
 </form>
