done withn task 1 to 3

--- a/views/account/accountManagement.ejs
+++ b/views/account/accountManagement.ejs
@@ -18,4 +18,11 @@
 
 <p>You're logged in</p>
 
-<a href="/account/accountInfo">Edit your account info</a>
+<!-- Update Account Information link (all users) -->
+<p>
+  <a href="/account/update/<%= accountData.account_id %>">
+    Update Account Information
+  </a>
+</p>
+
+
