--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -17,7 +17,8 @@
 
 
 <section class="inventory-management">
-
+  <h2>AddInventory Management</h2>
+  <p>Use the links below to manage inventory classifications and items.</p>
   <ul>
     <li>
       <a href="/inv/add-classification">Add New Classification</a>
@@ -28,7 +29,7 @@
   </ul>
 </section>
 
-<h2>Manage Inventory</h2>
+<h2>Update Inventory</h2>
 <p>Choose a classification to see those inventory items.</p>
 <%- classificationSelect %>
 
