--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,15 +1,26 @@
 <header class="site-header">
-    <div class="header-inner">
-        <h1 class="site-title">CSE MOTORS</h1>
-        
-        <% if (user && user.loggedin) { %>
-          <div class="account-links">
-            <a href="/account/" class="welcome-link">Welcome <%= user.account_firstname %></a>
-            <a href="/account/logout" class="logout-link">Logout</a>
-          </div>
+  <div class="header-inner">
+    <h1 class="site-title">CSE MOTORS</h1>
+    <div class="header-right">
+
+      <% if (user && user.loggedin) { %>
+        <div class="account-links">
+          <a href="/account/" class="welcome-link">Welcome <%= user.account_firstname %></a>
+          <a href="/account/logout" class="logout-link">Logout</a>
+        </div>
         <% } else { %>
-            <a href="/account/login" class="account-link">MY ACCOUNT</a>
-        <% } %>
-        <button id="myButton" aria-label="Open navigation menu"></button>
+          <a href="/account/login" class="account-link">MY ACCOUNT</a>
+          <% } %>
+            <!-- Cart Section (Always Visible) -->
+            <a href="/cart" class="cart-link" aria-label="View cart">🛒
+              <% if (typeof cartCount !=="undefined" && cartCount> 0) { %>
+                <span class="cart-badge">
+                  <%= cartCount %>
+                </span>
+                <% } %>
+            </a>
+            <button id="myButton" aria-label="Open navigation menu"></button>
+
     </div>
+  </div>
 </header>
